--- a/components/Login/password.html
+++ b/components/Login/password.html
@@ -16,7 +16,7 @@
             </div>
             <button type="submit" class="boton-recuperar">Recuperar Contraseña</button>
             <div class="texto-input-volver">
-                <p>Haz click <a href="index.html">aquí</a> para volver al login</p>
+                <p>Haz click <a href="./login.html">aquí</a> para volver al login</p>
             </div>
         </form>
     </div>
