--- a/components/Login/register.html
+++ b/components/Login/register.html
@@ -39,7 +39,7 @@
         <button type="submit" class="boton-registrarse">Registrarse</button>
         <div class="link-login">
           <p>
-            Ya tienes una cuenta? <a href="index.html">Inicia sesión aquí.</a>
+            Ya tienes una cuenta? <a href="./login.html">Inicia sesión aquí.</a>
           </p>
         </div>
       </form>
