--- a/components/Login/login.html
+++ b/components/Login/login.html
@@ -70,7 +70,7 @@
             </div>
             <div class="recordarme">
               <label><input type="checkbox" />Recordar usuario</label>
-              <a href="index2-del-login.html">Olvidaste tu contraseña?</a>
+              <a href="password.html">Olvidaste tu contraseña?</a>
             </div>
             <button type="submit" class="boton-login" onsubmit="redirect()">
               Ingresar
@@ -78,7 +78,7 @@
             <div class="registrarse">
               <p>
                 No tienes una cuenta?
-                <a href="index3-del-login.html">Regístrate aquí.</a>
+                <a href="register.html">Regístrate aquí.</a>
               </p>
             </div>
           </form>
