--- a/css/product-info.css
+++ b/css/product-info.css
@@ -2,6 +2,7 @@ section{
     display: flex;
     width: 100%;
     height: 430px;
+    
 }
 
 section img{
@@ -17,5 +18,34 @@ section img:hover{
     width: 300px;
     opacity: 1;
     filter: contrast(120%);
-    
+}
+
+.ful-img{
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(0, 0, 0,0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 99;
+}
+
+.ful-img span{
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    color: #fff;
+    cursor: pointer;
+
+}
+
+span{
+    font-size: 0.5em;
+}
+
+#comments{
+    border: solid;
 }
