--- a/css/styles.css
+++ b/css/styles.css
@@ -229,10 +229,44 @@ margin-right: 10px;
 html{
   scroll-behavior: smooth;
 }
-
-
 .navbar{
   position: sticky;
   top: 0;
   z-index: 3;
 }
+
+.fa{
+  color: black;
+}
+
+.checked {
+  color: orange;
+}
+
+/* ---------------------------- */
+
+/* .rating input {
+}
+
+.rating label {
+  float: right;
+  cursor: pointer;
+  color: #ccc;
+  transition: color 0.3s;
+}
+
+.rating label:before {
+  content: '★';
+  font-size: 40px;
+}
+
+.rating input:checked ~ label,
+
+.rating label:hover label {
+  color: #ffa600;
+  transition: color 0.3s;
+}
+
+.rating{
+  display: inline-block;
+} */
