--- a/css/styles.css
+++ b/css/styles.css
@@ -214,7 +214,7 @@ h4 {
   transform: translate3d(12px, 2%, 3em);
   -webkit-transform: translate3d(12px, 1%, 3em);
   -moz-transform: translate3d(12px, 2%, 3em);
-  box-shadow: 0 8px 8px 0 #000000, 0 8px 8px 0 #000000;
+  box-shadow: 0 10px 50px #7c7b7b;
 }
 
 .img-thumbnail {
