--- a/css/product-info.css
+++ b/css/product-info.css
@@ -14,7 +14,7 @@ section img{
 }
 
 section img:hover{
-    cursor: crosshair;
+    cursor: pointer;
     width: 300px;
     opacity: 1;
     filter: contrast(120%);
@@ -51,7 +51,7 @@ span{
 }
 
 #comments{
-    border: rgba(136, 136, 255, 0.658) solid;
+    border: rgb(165, 165, 165) solid;
     padding: 10px;
     border-radius: 10px;
 }
