--- a/css/product-info.css
+++ b/css/product-info.css
@@ -1,8 +1,18 @@
+.product-info{
+    padding: 15px;
+}
+
+.product-info a{
+    font-size: 20px;
+    text-decoration: none;
+}
+
 section{
     display: flex;
     width: 100%;
     height: 430px;
-    
+    border: 10px solid rgb(219, 219, 219);
+    border-radius: 10px;
 }
 
 section img{
