--- a/components/Login/login.html
+++ b/components/Login/login.html
@@ -19,36 +19,7 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
-      <div class="container">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav w-100 justify-content-between">
-            <li class="nav-item">
-              <a class="nav-link active" href="../../index.html">Inicio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../../categories.html">Categorías</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../../sell.html">Vender</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <main class="mt-5">
+    <main class="md-5"> 
       <div class="container">
         <div class="contenedor-login">
           <h2 class="letra-h2">Iniciar Sesión</h2>
