--- a/css/product-info.css
+++ b/css/product-info.css
@@ -3,32 +3,59 @@
 }
 
 .product-info a{
-    font-size: 20px;
+    font-size: 1.5rem;
     text-decoration: none;
 }
 
-section{
-    display: flex;
-    width: 100%;
-    height: 430px;
-    border: 10px solid rgb(219, 219, 219);
-    border-radius: 10px;
+  
+/* @media(max-width: 570px){ 
+    section{
+        display: block;
+        width: 100%;
+        height: auto;
+        border: 2px solid rgb(219, 219, 219);
+        border-radius: 10px;
+    }
+    section img{
+        max-width: 100%; 
+        width: auto;
+        flex-grow: auto;
+        object-fit: contain;
+        opacity: .8;
+        transition: .5s ease;
+    }
+    section img:hover{
+        cursor: pointer;
+        width: auto;
+        opacity: 1;
+        filter: contrast(120%);
+    }
 }
-
-section img{
-    width: 0px;
-    flex-grow: 1;
-    object-fit: cover;
-    opacity: .8;
-    transition: .5s ease;
-}
-
-section img:hover{
-    cursor: pointer;
-    width: 300px;
-    opacity: 1;
-    filter: contrast(120%);
-}
+@media(min-width:571px){
+    section{
+        display: flex;
+        width: 100%;
+        height: 430px;
+        border: 10px solid rgb(219, 219, 219);
+        border-radius: 10px;
+    }
+    
+    section img{
+        max-width: 100%; 
+        width: 0px;
+        flex-grow: 1;
+        object-fit: cover;
+        opacity: .8;
+        transition: .5s ease;
+    }
+    
+    section img:hover{
+        cursor: pointer;
+        width: 300px;
+        opacity: 1;
+        filter: contrast(120%);
+    }
+}  */
 
 .ful-img{
     width: 100%;
@@ -41,6 +68,7 @@ section img:hover{
     align-items: center;
     justify-content: center;
     z-index: 99;
+    
 }
 
 .ful-img span{
@@ -49,7 +77,7 @@ section img:hover{
     right: 5%;
     color: #fff;
     cursor: pointer;
-
+    
 }
 
 span{
@@ -64,6 +92,7 @@ span{
     border: rgb(165, 165, 165) solid;
     padding: 10px;
     border-radius: 10px;
+    margin: 10px 0; /*agre*/
 }
 
 .hr-comments{
@@ -73,14 +102,21 @@ span{
 
 #productos_relacionados{
     display: flex;
+    flex-wrap: wrap;/*agre*/
     cursor: pointer;
 }
-#imgContainerProducto img{
-    height: 200px;
+#imgContainerProducto{
+    flex: 0 0 calc(33.33% - 20px); /* Envolver elementos en filas en pantallas pequeñas */
     margin-left: 20px;
+}
+#imgContainerProducto img{
+    height: auto; /* height: 200px; */
+    margin-left: 20px;
+    max-width: 100%;
 }
 
 #imgContainerProducto p {
     font-size: 1.4rem;
     text-align: center;
 }
+
