--- a/css/product-info.css
+++ b/css/product-info.css
@@ -57,6 +57,12 @@
     }
 }  */
 
+.carousel-control-prev:hover, .carousel-control-next:hover{
+    background-color: black;
+    opacity: 0.3;
+    transition: 0.4s ease;
+}
+
 .ful-img{
     width: 100%;
     height: 100vh;
