--- a/components/Login/login.html
+++ b/components/Login/login.html
@@ -56,7 +56,7 @@
       </div>
     </main>
 
-    <footer class="text-muted">
+    <!-- <footer class="text-muted">
       <div class="container">
         <p class="float-end">
           <a href="#">Volver arriba</a>
@@ -68,7 +68,7 @@
           >
         </p>
       </div>
-    </footer>
+    </footer> -->
 
     <script src="./login.js"></script>
   </body>
