--- a/css/product-info.css
+++ b/css/product-info.css
@@ -6,8 +6,136 @@
     font-size: 1.5rem;
     text-decoration: none;
 }
+.carousel{
+    max-width: 70%;
+    height: auto;
+    padding: 0;
+}
 
+.info{
+    max-width: 30%;
+}
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    .carousel{
+        max-width: 100%;
+        height: auto;
+        padding: 0;
+    }
+    .info{
+        max-width: 100%;
+    }
+    
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+    .carousel{
+        max-width: 100%;
+        height: auto;
+
+    }
+    .info{
+        max-width: 100%;
+    }
+    
+    
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+
+}
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+   
+    
+}
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+    .carousel{
+        max-width: 60%;
+        height: auto;
+        padding: 0;
+    }
+    .info{
+        max-width: 40%;
+    }
+    
+}
   
+
+
+.carousel-control-prev:hover, .carousel-control-next:hover{
+    background-color: black;
+    opacity: 0.3;
+    transition: 0.4s ease;
+}
+
+.ful-img{
+    width: 100%;
+    height: 100vh;
+    background-color: rgb(0, 0, 0,0.9);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    z-index: 99;
+    
+}
+
+.ful-img span{
+    position: absolute;
+    top: 5%;
+    right: 5%;
+    color: #fff;
+    cursor: pointer;
+    
+}
+
+span{
+    font-size: 0.5em;
+}
+
+#closeSpan{
+    font-size: 2rem;
+}
+
+/* #comments{
+    border: rgb(165, 165, 165) solid;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px 0; 
+}
+
+.hr-comments{
+    padding: 2px;
+    border-radius: 10px;
+} */
+
+#productos_relacionados{
+    display: flex;
+    flex-wrap: wrap;/*agre*/
+    cursor: pointer;
+}
+#imgContainerProducto{
+    flex: 0 0 calc(33.33% - 20px); /* Envolver elementos en filas en pantallas pequeñas */
+    margin-left: 20px;
+}
+#imgContainerProducto img{
+    height: auto; /* height: 200px; */
+    margin-left: 20px;
+    max-width: 100%;
+}
+
+#imgContainerProducto p {
+    font-size: 1.4rem;
+    text-align: center;
+}
+
+
 /* @media(max-width: 570px){ 
     section{
         display: block;
@@ -56,73 +184,3 @@
         filter: contrast(120%);
     }
 }  */
-
-.carousel-control-prev:hover, .carousel-control-next:hover{
-    background-color: black;
-    opacity: 0.3;
-    transition: 0.4s ease;
-}
-
-.ful-img{
-    width: 100%;
-    height: 100vh;
-    background-color: rgb(0, 0, 0,0.9);
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: none;
-    align-items: center;
-    justify-content: center;
-    z-index: 99;
-    
-}
-
-.ful-img span{
-    position: absolute;
-    top: 5%;
-    right: 5%;
-    color: #fff;
-    cursor: pointer;
-    
-}
-
-span{
-    font-size: 0.5em;
-}
-
-#closeSpan{
-    font-size: 2rem;
-}
-
-#comments{
-    border: rgb(165, 165, 165) solid;
-    padding: 10px;
-    border-radius: 10px;
-    margin: 10px 0; /*agre*/
-}
-
-.hr-comments{
-    padding: 2px;
-    border-radius: 10px;
-}
-
-#productos_relacionados{
-    display: flex;
-    flex-wrap: wrap;/*agre*/
-    cursor: pointer;
-}
-#imgContainerProducto{
-    flex: 0 0 calc(33.33% - 20px); /* Envolver elementos en filas en pantallas pequeñas */
-    margin-left: 20px;
-}
-#imgContainerProducto img{
-    height: auto; /* height: 200px; */
-    margin-left: 20px;
-    max-width: 100%;
-}
-
-#imgContainerProducto p {
-    font-size: 1.4rem;
-    text-align: center;
-}
-
