--- a/css/styles.css
+++ b/css/styles.css
@@ -1,79 +1,6 @@
-.jumbotron,
-.card-body,
-.container,
-.site-header {
-  font-family: "Verdana", serif !important;
-}
-
-.jumbotron .display-4 {
-  font-weight: bold;
-}
 
 nav a {
   text-decoration: none;
-}
-
-.bd-placeholder-img {
-  font-size: 1.125rem;
-  text-anchor: middle;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-@media (min-width: 768px) {
-  .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-  }
-}
-
-.jumbotron {
-  height: 50vh;
-  padding: 5em inherit;
-  margin-bottom: 0;
-  background-color: #53c0fb;
-  background: url("../img/cover_back.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  color: black;
-  font-weight: bold;
-}
-
-@media (min-width: 768px) {
-  .jumbotron {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-}
-
-.jumbotron p:last-child {
-  margin-bottom: 0;
-}
-
-.jumbotron-heading {
-  font-weight: 300;
-}
-
-.jumbotron .container {
-  max-width: 40rem;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 10px;
-  text-shadow: 1px 1px 2px grey;
-}
-
-.jumbotron .lead {
-  font-size: 38px;
-}
-
-footer {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
-}
-
-footer p {
-  margin-bottom: 0.25rem;
 }
 
 .site-header a {
@@ -112,9 +39,7 @@ footer p {
   left: 50%;
 }
 
-.cursor-active {
-  cursor: pointer;
-}
+
 
 .left {
   float: left;
@@ -217,23 +142,10 @@ h4 {
   box-shadow: 0 10px 50px #7c7b7b;
 }
 
-.img-thumbnail {
-  transition: transform 0.3s ease;
-  cursor: pointer;
-}
-
-.img-thumbnail:hover {
-  transform: scale(1.1);
-}
-
 html {
   scroll-behavior: smooth;
 }
-.navbar {
-  position: sticky;
-  top: 0;
-  z-index: 3;
-}
+
 
 .fa {
   color: black;
@@ -243,6 +155,7 @@ html {
   color: orange;
 }
 
+/* Product info */
 #botonCmt {
   background-color: rgb(223, 223, 223);
   font-weight: 700;
@@ -265,10 +178,6 @@ html {
   color: white;
 }
 
-.caja-input {
-  padding-top: 15px;
-}
-
 .caja-puntua {
   padding-top: 10px;
 }
@@ -281,74 +190,7 @@ html {
   color: orange;
 }
 
-#color-estrella {
-  color: orange;
-}
-
-.theme-checkbox {
-  --toggle-size: 10px;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  width: 6.25em;
-  height: 3.125em;
-  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #efefef), color-stop(50%, #2a2a2a)) no-repeat;
-  background: -o-linear-gradient(left, #efefef 50%, #2a2a2a 50%) no-repeat;
-  background: linear-gradient(to right, #efefef 50%, #2a2a2a 50%) no-repeat;
-  background-size: 205%;
-  background-position: 0;
-  -webkit-transition: 0.4s;
-  -o-transition: 0.4s;
-  transition: 0.4s;
-  border-radius: 99em;
-  position: relative;
-  cursor: pointer;
-  font-size: var(--toggle-size);
-}
-
-.theme-checkbox::before {
-  content: "";
-  width: 2.25em;
-  height: 2.25em;
-  position: absolute;
-  top: 0.438em;
-  left: 0.438em;
-  background: -webkit-gradient(linear, left top, right top, color-stop(50%, #efefef), color-stop(50%, #2a2a2a)) no-repeat;
-  background: -o-linear-gradient(left, #efefef 50%, #2a2a2a 50%) no-repeat;
-  background: linear-gradient(to right, #efefef 50%, #2a2a2a 50%) no-repeat;
-  background-size: 205%;
-  background-position: 100%;
-  border-radius: 50%;
-  -webkit-transition: 0.4s;
-  -o-transition: 0.4s;
-  transition: 0.4s;
-}
-
-.theme-checkbox:checked::before {
-  left: calc(100% - 2.25em - 0.438em);
-  background-position: 0;
-}
-
-.theme-checkbox:checked {
-  background-position: 100%;
-}
-
-#caja-check{
-  position: relative;
-  z-index: 999;
-  width: 0;
-  padding: 0;
-  height: 0;
-  transform: translate(250px, -35px);
-}
-
-#usuarioBack{
-  background-color: rgb(61, 61, 61);
-  border-radius: 15px;
-  padding-left: 5px;
-  padding-right: 5px;
-}
-
+/* Categories */
 #catList {
   cursor: pointer;
 }
