responsive login, modo oscuro index y carrito

--- a/components/Login/login.html
+++ b/components/Login/login.html
@@ -39,7 +39,7 @@
               /><i class="bx bxs-lock-alt"></i>
             </div>
             <div class="recordarme">
-              <label><input type="checkbox" />Recordar usuario</label>
+              <label><input type="checkbox" />Recordar usuario</label><br>
               <a href="password.html">Olvidaste tu contraseña?</a>
             </div>
             <button type="submit" class="boton-login" onsubmit="redirect()">
