--- a/css/product-info.css
+++ b/css/product-info.css
@@ -6,6 +6,7 @@
     font-size: 1.5rem;
     text-decoration: none;
 }
+
 .carousel{
     max-width: 70%;
     height: auto;
@@ -103,17 +104,31 @@ span{
     font-size: 2rem;
 }
 
-/* #comments{
-    border: rgb(165, 165, 165) solid;
-    padding: 10px;
-    border-radius: 10px;
-    margin: 10px 0; 
+/* Comentarios */
+/* Cambia el color del botón del acordeón cuando está cerrado */
+.accordion-button:not(.show) {
+    background-color: rgb(223, 223, 223); /* rgb(25, 135, 84); */
+    color: #000000; 
+}
+/*Cambia de color el cuerpo cuando el acordeon esta cerrado*/
+.accordion-body:not(.show) {
+    background-color: white; 
+    color: #000000; 
 }
 
-.hr-comments{
-    padding: 2px;
-    border-radius: 10px;
+/* #comments {
+    max-width: 80%; 
+    margin: 0 auto; 
 } */
+
+.buscador {
+    display: felx;
+    justify-content: center;
+    align-items: center; 
+}
+.caja-input, .caja-puntua{
+    text-align: center;
+}
 
 #productos_relacionados{
     display: flex;
