--- a/css/product-info.css
+++ b/css/product-info.css
@@ -16,6 +16,11 @@
 .info{
     max-width: 30%;
 }
+
+.product-name {
+    margin: 12px;
+}
+
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     .carousel{
@@ -62,15 +67,22 @@
     .info{
         max-width: 40%;
     }
+
+    #productos_relacionados{
+        display: flex;
+    }
     
 }
   
 
 
-.carousel-control-prev:hover, .carousel-control-next:hover{
+.carousel-control-prev-icon, .carousel-control-next-icon{
+    
+    width: 40px;
+    height: 40px;
     background-color: black;
-    opacity: 0.3;
-    transition: 0.4s ease;
+    opacity: 0.7;
+    border-radius: 25px;
 }
 
 .ful-img{
